# emotion

./: BUILD  WORKSPACE  build.sh  client_run.sh  repos.bzl  server_run.sh
client/: BUILD  client.cc  client.h  main.cc
config/: BUILD  config.h
proto/: BUILD.bazel  emotion.proto
server/: BUILD  server.cc
