load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_compile")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_compile")

proto_library(
    name = "emotion_proto",
    srcs = [
        "emotion.proto",
    ],
    visibility = ["//visibility:public"],
)

cpp_proto_library(
    name = "emotion_proto_lib",
    protos = ["emotion_proto"],
    visibility = ["//visibility:public"],
)

cpp_proto_compile(
    name = "emotion_cpp_proto",
    protos = ["emotion_proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "emotion_cpp_grpc_lib",
    protos = ["emotion_proto"],
    visibility = ["//visibility:public"],
)

cpp_grpc_compile(
    name = "emotion_cpp_grpc",
    protos = ["emotion_proto"],
    visibility = ["//visibility:public"],
)
